# tonic-openssl

./: Cargo.toml  README.md
.github/workflows/: CI.yml
example/: Cargo.toml
example/src/: client.rs  client2.rs  lib.rs  server.rs
src/: certificate.rs  client.rs  lib.rs
