[package]
name = "example"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client2"
path = "src/client2.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.9"
tonic-openssl = { version = "0.2", path = ".." }
hyper = "0.14"
hyper-openssl = "0.9"
prost = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
openssl = "0.10"
tower = "0.4"
pretty_env_logger = "*"

[build-dependencies]
tonic-build = "0.9"
