[package]
name = "example"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2021"
publish = false

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "client2"
path = "src/client2.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.12"
tonic-openssl = { version = "0.3", path = ".." }
hyper = { version = "1.0", features = ["http1", "http2"] }
hyper-openssl = { version = "0.10", features = ["client-legacy"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
openssl = "0.10"
tower = "0.5"
pretty_env_logger = "*"
hyper-util = { version = "0.1.9", features = ["client-legacy", "http1", "http2"] }
tokio-util = "0.7"

[build-dependencies]
tonic-build = "0.12"

# For protobuf rs code
[package.metadata.rust-analyzer]
cargo.loadOutDirsFromCheck = true